--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "gulp-rjs": "~0.1.0",
     "gulp-uglify": "~0.3.1",
     "requirejs": "~2.1.14",
-    "gulp": "~3.8.8"
+    "gulp": "~3.8.8",
+    "karma": "~0.12.23"
   },
   "scripts": {
     "test": "run"
