--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "gulp-clean": "~0.3.1",
     "gulp-pathmap": "~0.1.0",
     "requirejs": "~2.1.14",
-    "gulp-rjs": "~0.1.0"
+    "gulp-rjs": "~0.1.0",
+    "del": "~0.1.2"
   },
   "scripts": {
     "test": "run"
